...
    };

    return (
        <View style={[styles.container, { justifyContent: 'center', padding: 20 }]}>

            <Text style={[styles.mainTitle, { marginBottom: 30 }]}>
                Picstore Login
            </Text>

            <TextInput
                style={styles.input}
                placeholder="Email"
                placeholderTextColor={colors.textMain + '80'}
...
